--- a/faq/index.html
+++ b/faq/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Unplugged Retreat</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -39,7 +39,28 @@
       <aside></aside>
     </main>
     <!-- main wrapper -->
-    <footer></footer>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
+          <div class="contact">
+            <address></address>
+          </div>
+          <div class="social">
+            <p>
+              <a
+                href="https://www.facebook.com/yoursite"
+                target="_blank"
+                rel="noopener"
+              ></a>
+            </p>
+            <!-- other social links here -->
+          </div>
+        </div>
+        <!-- footer content ends -->
+        <div class="copyright"></div>
+      </div>
+      <!--footer content-wrapper ends-->
+    </footer>
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
