--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Unplugged Retreat</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -39,11 +39,36 @@
       </div>
     </header>
     <main>
-      <section></section>
+      <section class="hero-area">
+        <div class="content-wrapper">
+          <h1>Retreat from the desk, return refreshed.</h1>
+        </div>
+      </section>
       <aside></aside>
     </main>
     <!-- main wrapper -->
-    <footer></footer>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
+          <div class="contact">
+            <address></address>
+          </div>
+          <div class="social">
+            <p>
+              <a
+                href="https://www.facebook.com/yoursite"
+                target="_blank"
+                rel="noopener"
+              ></a>
+            </p>
+            <!-- other social link -->
+          </div>
+        </div>
+        <!-- footer content ends -->
+        <div class="copyright"></div>
+      </div>
+      <!-- footer content-wrapper ends-->
+    </footer>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
