Added footer items

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <header>
       <div>
         <a href="#"><img src="" alt="unplugged logo" /></a>
+        <div class="header-divider"></div>
         <nav>
           <ul>
             <li>
@@ -44,28 +45,48 @@
           <h1>Retreat from the desk, return refreshed.</h1>
         </div>
       </section>
-      <aside></aside>
+      <aside>
+        <div class="content-wrapper">
+          <div class="form-description">
+            <h3>Want to join the next retreat?</h3>
+            <p>
+              Find out when we are having our next retreat and how your team or
+              company can sign up!
+            </p>
+          </div>
+        </div>
+      </aside>
     </main>
     <!-- main wrapper -->
     <footer>
       <div class="content-wrapper">
-        <div class="footer-contact">
+        <div class="footer-content">
           <div class="contact">
-            <address></address>
+            <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-555<br />
+                hello@unplugged.com
+              </p>
+            </address>
           </div>
           <div class="social">
-            <p>
-              <a
-                href="https://www.facebook.com/yoursite"
-                target="_blank"
-                rel="noopener"
-              ></a>
-            </p>
-            <!-- other social link -->
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a
+                  href="https://www.facebook.com/yoursite"
+                  target="_blank"
+                  rel="noopener"
+                ></a>
+              </p>
+            </div>
           </div>
         </div>
         <!-- footer content ends -->
-        <div class="copyright"></div>
+        <div class="copyright">
+          <p>Copyright 2023 | Unplugged</p>
+        </div>
       </div>
       <!-- footer content-wrapper ends-->
     </footer>
