--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,7 @@
     <header>
       <div>
         <a href="#"><img src="" alt="unplugged logo" /></a>
+        <div class="header-divider"></div>
         <nav>
           <ul>
             <li><a href="faq/index.html" rel="noopener">FAQ</a></li>
@@ -41,23 +42,33 @@
     <!-- main wrapper -->
     <footer>
       <div class="content-wrapper">
-        <div class="footer-contact">
+        <div class="footer-content">
           <div class="contact">
-            <address></address>
+            <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-555<br />
+                hello@unplugged.com
+              </p>
+            </address>
           </div>
           <div class="social">
-            <p>
-              <a
-                href="https://www.facebook.com/yoursite"
-                target="_blank"
-                rel="noopener"
-              ></a>
-            </p>
-            <!-- other social links here -->
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a
+                  href="https://www.facebook.com/yoursite"
+                  target="_blank"
+                  rel="noopener"
+                ></a>
+              </p>
+            </div>
           </div>
         </div>
         <!-- footer content ends -->
-        <div class="copyright"></div>
+        <div class="copyright">
+          <p>Copyright 2023 | Unplugged</p>
+        </div>
       </div>
       <!--footer content-wrapper ends-->
     </footer>
