Added form html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
               company can sign up!
             </p>
           </div>
+          <div class="form">
+            <h3>Find out more</h3>
+            <input type="text" name="name" value="email address" />
+            <input type="button" value="Download Itinerary" />
+          </div>
         </div>
       </aside>
     </main>
