Added responsive images

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
   <body>
     <!-- Add your site or application content here -->
     <header>
-      <div>
-        <a href="#"><img src="" alt="unplugged logo" /></a>
+      <div class="content-wrapper">
+        <figure>
+          <a href="#">
+            <img src="img/unpluggedlogo.png" alt="unplugged logo" />
+          </a>
+        </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -45,6 +49,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <section class="hero-area">
         <div class="content-wrapper">
@@ -67,6 +72,7 @@
           </div>
         </div>
       </aside>
+
       <section class="features">
         <div class="content-wrapper">
           <h2>
@@ -117,10 +123,17 @@
           </div>
         </div>
       </section>
+
       <section class="reviews">
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
           <article>
+            <figure>
+              <img
+                src="img/unplugged-retreat-lacrue.jpg"
+                alt="Group of happy people at an outdoor retreat."
+              />
+            </figure>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
