--- a/faq/index.html
+++ b/faq/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    
+
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
@@ -30,8 +30,12 @@
   <body>
     <!-- Add your site or application content here -->
     <header>
-      <div>
-        <a href="#"><img src="" alt="unplugged logo" /></a>
+      <div class="content-wrapper">
+        <figure>
+          <a href="../index.html">
+            <img src="/../img/unpluggedlogo.png" alt="unplugged logo" />
+          </a>
+        </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
