Added map to about page

--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,17 @@
         </div>
       </section>
       <section class="map">
-        <figure></figure>
+        <figure>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d210928.72926027552!2d-118.34829073491207!3d34.30562414230224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2dbef4714d959%3A0xaa04bea62fc51d91!2sAngeles%20National%20Forest!5e0!3m2!1sen!2sus!4v1695492737221!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </figure>
       </section>
       <section class="contact-section">
         <div class="content-wrapper">
