--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,10 @@
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/14c6eb3156.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Fonts -->
     <link
