--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script
+      src="https://kit.fontawesome.com/14c6eb3156.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Fonts -->
     <link
@@ -80,42 +84,54 @@
           </h2>
           <div class="features-items">
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-campground"></i>
+              </p>
               <p class="features-item-description">
                 Located in a peaceful bungalow outside of Lake Geneva,
                 Wisconsin.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-bed"></i>
+              </p>
               <p class="features-item-description">
                 12 private rooms with ensuite bathrooms, 2 group meeting rooms,
                 and 4 breakout rooms.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-utensils"></i>
+              </p>
               <p class="features-item-description">
                 Private chef team providing on demand meals - just like your
                 team kitchen.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-shoe-prints"></i>
+              </p>
               <p class="features-item-description">
                 5 outdoor obstacle courses, including private beach ½ mile from
                 bungalow.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-smile"></i>
+              </p>
               <p class="features-item-description">
                 Retreat facilitator to manage your day to day activities so you
                 all get a chance to reset.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icons"></p>
+              <p class="fontawesome-icons">
+                <i class="fas fa-wifi"></i>
+              </p>
               <p class="features-item-description">
                 Dedicated computer room for times that you must wifi.
               </p>
