Added social font icons on each page

--- a/faq/index.html
+++ b/faq/index.html
@@ -17,7 +17,10 @@
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
-    <script src="https://kit.fontawesome.com/14c6eb3156.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/14c6eb3156.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Google Fonts -->
     <link
@@ -103,6 +106,23 @@
                   href="https://www.facebook.com/yoursite"
                   target="_blank"
                   rel="noopener"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </p>
+              <p>
+                <a
+                  href="https://twitter.com/Skillcrush"
+                  target="_blank"
+                  rel="noopener"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </p>
+              <p>
+                <a
+                  href="https://www.instagram.com/skillcrush/"
+                  target="_blank"
+                  rel="noopener"
+                  ><i class="fab fa-instagram"></i
                 ></a>
               </p>
             </div>
