--- a/about/index.html
+++ b/about/index.html
@@ -132,6 +132,23 @@
                   href="https://www.facebook.com/yoursite"
                   target="_blank"
                   rel="noopener"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </p>
+              <p>
+                <a
+                  href="https://twitter.com/Skillcrush"
+                  target="_blank"
+                  rel="noopener"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </p>
+              <p>
+                <a
+                  href="https://www.instagram.com/skillcrush/"
+                  target="_blank"
+                  rel="noopener"
+                  ><i class="fab fa-instagram"></i
                 ></a>
               </p>
             </div>
