Created div for reviews and moved copyright outside content wrapper

--- a/index.html
+++ b/index.html
@@ -150,15 +150,17 @@
                 alt="Group of happy people at an outdoor retreat."
               />
             </figure>
-            <h3>LaCrue Bottling Co. October 2018</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
+            <div>
+              <h3>LaCrue Bottling Co. October 2018</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.
+              </p>
+            </div>
           </article>
         </div>
       </section>
@@ -207,9 +209,9 @@
           </div>
         </div>
         <!-- footer content ends -->
-        <div class="copyright">
-          <p>Copyright 2023 | Unplugged</p>
-        </div>
+      </div>
+      <div class="copyright">
+        <p>Copyright 2023 | Unplugged</p>
       </div>
       <!-- footer content-wrapper ends-->
     </footer>
